<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="LoginViewModel"
            type="com.example.bookshop.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolBar"
                layout="@layout/tool_bar"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_26dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5dp"
                        android:hint="USERNAME"
                        android:inputType="textEmailAddress"
                        android:text="@={LoginViewModel.emailAddress}"
                        android:textSize="13sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5dp"
                        android:layout_marginRight="@dimen/margin_5dp"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:drawableRight="@drawable/ic_visibility_off"
                        android:hint="PASSWORD"
                        android:inputType="textPassword"
                        android:text="@={LoginViewModel.password}"
                        android:textSize="13sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_35dp"
                        android:layout_marginLeft="@dimen/margin_5dp"
                        android:layout_marginRight="@dimen/margin_5dp"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:background="@drawable/rounded_corner_button"
                        android:onClick="@{(v) -> LoginViewModel.onClick(v)}"
                        android:text="@string/login_title"
                        android:textColor="@color/toolBarTextColor" />

                    <TextView
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:id="@+id/signupTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v) -> LoginViewModel.signupClicked(v)}"
                        android:text="@string/signup_message"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>

